examples/test/testpolicy14010.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14010
  namespace: namespace453
spec:
  podSelector:
    matchLabels:
      key10: value42
      key15: value10
      key25: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value23
          key43: value47
          key47: value40
      podSelector:
        matchLabels:
          key30: value2
          key25: value2
          key3: value42
